fix(side-bar-menu): align padding with rest of design

--- a/styles/layout/_side-bar-menu.less
+++ b/styles/layout/_side-bar-menu.less
@@ -34,7 +34,7 @@
     display: block;
     font-size: @side-bar-font-size;
     font-weight: @side-bar-font-weight;
-    padding: @grid-size @grid-size*4;
+    padding: @grid-size @grid-size*3;
     position: relative;
     transition: background 0.5s @animation-cubic-bezier-1;
 
